fix card alignments

--- a/style.css
+++ b/style.css
@@ -1047,7 +1047,7 @@ main:nth-child(10){
 .card3 {
     text-align:center;
     position: absolute;
-    left: 820px;
+    left: 790px;
     width: 250px;
     height: 350px;
     margin-top: -20px;
